# rye_ruff_base

./: README.md  pyproject.toml
src/: main.py
